cluster/apps/nginx/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-texsite
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-texsite
  template:
    metadata:
      labels:
        app: nginx-texsite
    spec:
      containers:
        - name: nginx
          image: 789382030074.dkr.ecr.us-west-1.amazonaws.com/nginx-texsite:00000000-000000 # {"$imagepolicy": "flux-system:nginx-texsite"}
          ports:
            - containerPort: 80
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter:latest
          args:
            - --nginx.scrape-uri=http://127.0.0.1:8080/stub_status
            - --web.listen-address=:9113
          ports:
            - containerPort: 9113
