cluster/apps/nginx/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-texsite
  namespace: default
  labels:
    app: nginx-texsite
spec:
  selector:
    app: nginx-texsite
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: metrics
      port: 9113
      targetPort: 9113
  type: ClusterIP
